tests/ui/specialization/min_specialization/impl-on-nonexisting.stderr
error[E0412]: cannot find type `NonExistent` in this scope
  --> $DIR/impl-on-nonexisting.rs:4:16
   |
LL | impl Trait for NonExistent {}
   |                ^^^^^^^^^^^ not found in this scope

error: hi
  --> $DIR/impl-on-nonexisting.rs:4:1
   |
LL | trait Trait {}
   | ----------- built-in `dyn Trait` implementation for this trait
LL | impl Trait for NonExistent {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ overlaps with this blanket impl
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0412`.
